--- a/templates/index.html
+++ b/templates/index.html
@@ -205,7 +205,9 @@
                         <div style="margin-bottom: 100px;"></div>
                     </div>
                 </div>
-                <button class="scroll-button" onclick="scrollToTopButton()">Back To Top</button>
+                <div style="background-color: rgb(248, 252, 252); display: flex; justify-content: center;">
+                    <button class="scroll-button" onclick="scrollToTopButton()">Back To Top</button>
+                </div>
             </section>
        
 
