--- a/templates/IndividualProjects/andersonCodingClub.html
+++ b/templates/IndividualProjects/andersonCodingClub.html
@@ -62,9 +62,11 @@
     
         <script>
             const pages = [
+                    '/kneeEd',
                     '/fistbump',
                     '/stockSentiment',
-                    '/andersonCodingClub'
+                    '/andersonCodingClub',
+                    '/canKiosk'
                 ];
                 let currentPageIndex = 0;
                 let loading = false;
