--- a/templates/IndividualProjects/fistbump.html
+++ b/templates/IndividualProjects/fistbump.html
@@ -66,10 +66,12 @@
     <script>
 
         const pages = [
-                '/fistbump',
-                '/stockSentiment',
-                '/andersonCodingClub'
-            ];
+                    '/kneeEd',
+                    '/fistbump',
+                    '/stockSentiment',
+                    '/andersonCodingClub',
+                    '/canKiosk'
+                ];
             let currentPageIndex = 0;
             let loading = false;
             let nextPageContent = '';
