--- a/templates/IndividualProjects/stockSentiment.html
+++ b/templates/IndividualProjects/stockSentiment.html
@@ -44,10 +44,12 @@
     
     <script>
         const pages = [
-                '/fistbump',
-                '/stockSentiment',
-                '/andersonCodingClub'
-            ];
+                    '/kneeEd',
+                    '/fistbump',
+                    '/stockSentiment',
+                    '/andersonCodingClub',
+                    '/canKiosk'
+                ];
             let currentPageIndex = 0;
             let loading = false;
             let nextPageContent = '';
